--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -100,7 +100,7 @@
       <br>
 
       {% if site.enable_footnote %}
-      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
+      <p><small><script language="Javascript"> var date = new Date(document.lastModified); document.write("Last modified: " + date.toLocaleDateString()); </script></small></p>
       {% endif %}
 
       </section>
