--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -84,6 +84,12 @@
         </a>
         {% endif %}
 
+        {% if site.linkedin %}
+        <a style="margin: 0 5px 0 0" href="{{ site.orcid_link }}">
+          <i class="fab fa-id-card-o"></i>
+        </a>
+        {% endif %}
+
         {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
           <i class="fab fa-x-twitter"></i>
