--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -84,9 +84,9 @@
         </a>
         {% endif %}
 
-        {% if site.linkedin %}
+        {% if site.orcid_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.orcid_link }}">
-          <i class="fab fa-id-card-o"></i>
+          <i class="ai ai-orcid-square ai-fw"></i>
         </a>
         {% endif %}
 
