--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -62,7 +62,8 @@
         <div class="social-icons">
         {% if site.google_scholar %}
         <a style="margin: 0 5px 0 0" href="{{ site.google_scholar }}">
-          <i class="ai ai-google-scholar" style="font-size:1.2rem"></i>
+          <!-- <i class="ai ai-google-scholar" style="font-size:1.2rem"></i> -->
+          <i class="fa-brands fa-google-scholar" style="font-size:1.2rem"></i>
         </a>  
         {% endif %}
 
@@ -89,6 +90,20 @@
           <i class="ai ai-orcid-square ai-fw"></i>
         </a>
         {% endif %}
+
+        {% if site.zhihu_link %}
+        <a style="margin: 0 5px 0 0" href="{{ site.zhihu_link }}">
+          <i class="fa-brands fa-zhihu"></i>
+        </a>
+        {% endif %}
+
+        {% if site.bilibili_link %}
+        <a style="margin: 0 5px 0 0" href="{{ site.bilibili_link }}">
+          <i class="fa-brands fa-bilibili"></i>
+        </a>
+        {% endif %}
+
+        
 
         {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
