--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -55,7 +55,7 @@
         <br>
         {% endif %}
         {% if site.email %}
-        <email>{{ site.email }}</email>
+        <i class="fa-solid fa-at"></i><email>{{ site.email }}</email>
         {% endif %}
 
         <br>
@@ -70,25 +70,26 @@
 
         {% if site.cv_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
-          <i class="ai ai-cv" style="font-size:1.3rem;"></i>
+          <!-- <i class="ai ai-cv" style="font-size:1.3rem;"></i> -->
+          <i class="fa-solid fa-address-card"></i>
         </a>
         {% endif %}
 
         {% if site.github_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
-          <i class="fab fa-github"></i>
+          <i class="fa-brands fa-github"></i>
         </a>
         {% endif %}
 
         {% if site.linkedin %}
         <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
-          <i class="fab fa-linkedin"></i>
+          <i class="fa-brands fa-linkedin"></i>
         </a>
         {% endif %}
 
         {% if site.orcid_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.orcid_link }}">
-          <i class="ai ai-orcid-square ai-fw"></i>
+          <i class="fa-brands fa-orcid"></i>
         </a>
         {% endif %}
 
@@ -105,10 +106,9 @@
         {% endif %}
 
         
-
         {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
-          <i class="fab fa-x-twitter"></i>
+          <i class="fa-brands fa-square-x-twitter"></i>
         </a>
         {% endif %}
         </div>
