--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -51,11 +51,11 @@
         <br>
         {% endif %}
         {% if site.affiliation %}
-        <a href="{{ site.affiliation_link }}" rel="noopener"><autocolor>{{ site.affiliation }}</autocolor></a>
+        <i class="fa-solid fa-school"></i> &nbsp; <a href="{{ site.affiliation_link }}" rel="noopener"><autocolor>{{ site.affiliation }}</autocolor></a>
         <br>
         {% endif %}
         {% if site.email %}
-        <i class="fa-solid fa-at"></i><email>{{ site.email }}</email>
+        <i class="fa-solid fa-at"></i> &nbsp; <email>{{ site.email }}</email>
         {% endif %}
 
         <br>
