--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -75,22 +75,9 @@
         </a>  
         {% endif %}
 
-        {% if site.cv_link %}
-        <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
-          <!-- <i class="ai ai-cv" style="font-size:1.3rem;"></i> -->
-          <i class="fa-solid fa-address-card"></i>
-        </a>
-        {% endif %}
-
         {% if site.github_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
           <i class="fa-brands fa-github"></i>
-        </a>
-        {% endif %}
-
-        {% if site.linkedin %}
-        <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
-          <i class="fa-brands fa-linkedin"></i>
         </a>
         {% endif %}
 
@@ -99,6 +86,13 @@
           <i class="fa-brands fa-orcid"></i>
         </a>
         {% endif %}
+
+        {% if site.researchgate_link %}
+        <a style="margin: 0 5px 0 0" href="{{ site.researchgate_link }}">
+          <i class="fa-brands fa-researchgate"></i>
+        </a>
+        {% endif %}
+
 
         {% if site.zhihu_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.zhihu_link }}">
@@ -123,13 +117,27 @@
           <i class="fa-brands fa-qq"></i>
         </a>
         {% endif %}   
-
-
-
           
         {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
           <i class="fa-brands fa-square-x-twitter"></i>
+        </a>
+        {% endif %}
+
+        {% if site.linkedin %}
+        <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        {% endif %}        {% if site.linkedin %}
+        <a style="margin: 0 5px 0 0" href="{{ site.linkedin }}">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        {% endif %}
+
+        {% if site.cv_link %}
+        <a style="margin: 0 5px 0 0" href="{{ site.cv_link }}">
+          <!-- <i class="ai ai-cv" style="font-size:1.3rem;"></i> -->
+          <i class="fa-solid fa-address-card"></i>
         </a>
         {% endif %}
         </div>
